sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:6: error: value echanger is not a member of StringContext
  while (echanger"" == true) {
         ^